hydroflow/tests/snapshots/surface_fold_keyed__fold_keyed_static@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_fold_keyed.rs
expression: "df.meta_graph().unwrap().to_mermaid(&Default::default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_stream(items_recv)</code>"/]:::pullClass
2v1[\"<div style=text-align:center>(2v1)</div> <code>fold_keyed::&lt;<br>    'static,<br>&gt;(Vec::new, |old: &amp;mut Vec&lt;u32&gt;, mut x: Vec&lt;u32&gt;| old.append(&amp;mut x))</code>"/]:::pullClass
3v1[/"(3v1) <code>for_each(|v| result_send.send(v).unwrap())</code>"\]:::pushClass
4v1["(4v1) <code>handoff</code>"]:::otherClass
2v1-->3v1
1v1-->4v1
4v1--x2v1; linkStyle 2 stroke:red
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1
end
subgraph sg_2v1 ["sg_2v1 stratum 1"]
    2v1
    3v1
end

